--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,3 +18,4 @@ $custom-theme-colors: (
 
 // Load a custom font
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
